navlinks underline animation

--- a/src/index.css
+++ b/src/index.css
@@ -47,4 +47,31 @@ body {
   }
 }
 
+/* underline animation */
 
+.hover-underline{
+  display:block;
+  position: relative;
+  cursor: pointer;
+  z-index: 1;
+  padding: 5px 0;
+}
+
+.hover-underline::after{
+  content: '';
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 4px;
+  bottom: 0;
+  left: 0;
+  background-color: #FF3131;
+  transform-origin: bottom right;
+  transition: transform 0.3s ease-in-out;
+  z-index: -1;
+}
+
+.hover-underline:hover::after{
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
